--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -36,7 +36,7 @@
                         </td>
                         <td class="text-center">
                             <div *ngIf="user?._id!==currentUser?._id">
-                                <button class="btn btn-sm " [ngClass]="
+                                <button class="btn btn-sm " (click)="handleFriendRequest(user)" [ngClass]="
                                 {
                                     'btn-outline-danger':user.status==='Remove Friend','btn-outline-primary':user.status==='Send Request','btn-outline-secondary':user.status==='Cancel Request','btn-outline-success':user.status==='sent'
                                 }">
@@ -47,7 +47,8 @@
                                     "></i>
                                     <span class="mx-1">{{user.status==="sent"?'Accept':user.status}}</span>
                                 </button>
-                                <button class="btn btn-sm btn-outline-secondary mx-2" *ngIf="user.status==='sent'">
+                                <button class="btn btn-sm btn-outline-secondary mx-2" *ngIf="user.status==='sent'"
+                                    (click)="handleFriendRequest(user,'cancel')">
                                     <i class="bi bi-x-circle-fill"></i>
                                     <span class="mx-1">Cancel</span>
                                 </button>
