--- a/src/app/common/components/post-form/post-form.component.html
+++ b/src/app/common/components/post-form/post-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-6 offset-3 shadow p-3 mb-5 bg-body rounded">
+        <div class="col-6 mx-3 shadow p-3 mb-5 bg-body rounded">
             <form [formGroup]="form" (ngSubmit)="post()">
                 <div class="input-group mb-3">
                     <input type="text" formControlName="message" name="message" id="message" class="form-control"
