--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,15 @@
 <div class="container">
     <div class="row">
         <div class=" mt-2  shadow p-3 mb-2 bg-body rounded text-center" *ngIf="currentUser?._id">
-            <div class="float-start mx-5">
+            <div class="float-start offset-3">
                 <img [src]="imageUrl+currentUser?.file" class="img-responsive " style="width:100px;height: 100px;"
                     *ngIf="currentUser?.file" />
                 <h2 class="text-center">{{currentUser?.name}}</h2>
             </div>
+
             <post-form (newPostEvent)="addNewPost($event)" [user]="currentUser">
             </post-form>
+
         </div>
         <div *ngIf="!currentUser?._id" class="alert alert-danger alert-dismissible fade show text-center">
             <strong>Login to post</strong>
