--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,9 +13,9 @@
                 <li class="nav-item" *ngIf="auth.isLoggedIn()">
                     <a class="nav-link" routerLink="users">Users</a>
                 </li>
-                <li class="nav-item" *ngIf="auth.isLoggedIn()">
+                <!-- <li class="nav-item" *ngIf="auth.isLoggedIn()">
                     <a class="nav-link" routerLink="posts">Posts</a>
-                </li>
+                </li> -->
                 <li class="nav-item float-end">
 
                 </li>
