--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -4,14 +4,19 @@
             <div class="comments" *ngFor="let comment of comments">
                 <div class="mb-4">
                     <div class="user-avatar float-start me-3 bg-light p-2 rounded">
-                        <a [routerLink]="['../',comment?.user?._id]" class="text-dark text-decoration-none">
+                        <a [routerLink]="['../../../users/profile/',comment?.user?._id]"
+                            class="text-dark text-decoration-none">
                             <img [src]="imageUrl+comment?.user?.file" class="img-responsive rounded-circle"
-                                style="width:30px;height: 30px;" />
+                                style="width:30px;height: 30px;"
+                                onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'" />
                         </a>
                     </div>
                     <div class="mx-5 p-2 rounded-3" style="background:#E5E4E2;">
                         <div class="user-name ">
-                            <strong>{{comment?.user?.name}}</strong>
+                            <a [routerLink]="['../../../users/profile/',comment?.user?._id]"
+                                class="text-dark text-decoration-none clickable">
+                                <strong>{{comment?.user?.name}}</strong>
+                            </a>
                         </div>
                         <div class="comment-content">
                             <span class="comment">
