--- a/src/app/common/components/post-form/post-form.component.html
+++ b/src/app/common/components/post-form/post-form.component.html
@@ -34,7 +34,8 @@
                     <span>
                         <div class="text-center m-2">
                             <img [src]="localPostImageUrl | sanitizerUrl" alt="..."
-                                class="img-fluid img-thumbnail rounded h-25 w-25" />
+                                class="img-fluid img-thumbnail rounded h-25 w-25"
+                                onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'" />
                         </div>
                     </span>
                 </div>
