--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,10 @@
     <div class="row">
         <div class=" mt-2  shadow p-3 mb-2 bg-body rounded text-center" *ngIf="currentUser?._id">
             <div class="float-start offset-3">
+
                 <img [src]="imageUrl+currentUser?.file" class="img-responsive " style="width:100px;height: 100px;"
-                    *ngIf="currentUser?.file" />
+                    *ngIf="currentUser?.file" onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'" />
+
                 <h2 class="text-center">{{currentUser?.name}}</h2>
             </div>
 
