--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,7 +30,8 @@
                 <li class="nav-item dropdown" *ngIf="auth.isLoggedIn()">
                     <a class="nav-link dropdown-toggle" href="#" id="myprofile" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        <img [src]="imageUrl+currentUser?.file" class="img-responsive" style="width:30px;height: 30px;">
+                        <img [src]="imageUrl+currentUser?.file" class="img-responsive" style="width:30px;height: 30px;"
+                            onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'">
                         {{currentUser?.name}}
                     </a>
                     <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="myprofile">
