--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class=" mt-2 shadow p-3 mb-2 bg-body rounded text-center" *ngIf="user?._id">
             <img [src]="imageUrl+user?.file" class="img-responsive " style="width:100px;height: 100px;"
-                *ngIf="user?.file" />
+                *ngIf="user?.file" onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'" />
             <h2 class="text-center">{{user?.name}}</h2>
 
             <div *ngIf="user?._id!==currentUser?._id">
