--- a/src/app/common/components/navbar/navbar.component.html
+++ b/src/app/common/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light shadow p-3 mb-5 rounded" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light shadow p-3 rounded sticky-top" style="background-color: #e3f2fd;">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="/">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#media-navbar"
