--- a/src/app/common/components/posts/posts.component.html
+++ b/src/app/common/components/posts/posts.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container mb-3">
     <div class="row">
         <div *ngIf="posts?.length>0">
-            <div class="col-6 offset-3 mt-5 shadow mb-5 bg-body rounded" *ngFor="let post of posts">
+            <div class="col-6 offset-4 mt-2 shadow mb-0 bg-body rounded " style="max-width: 350px;"
+                *ngFor="let post of posts">
                 <div class="post">
                     <div class="post-header p-3">
                         <div class="post-action float-end" *ngIf="post?.user?._id===currentUser?._id">
@@ -45,8 +46,31 @@
                             <span class="text-primary fs-5 clickable" (click)="toggleLikedBy(post)"
                                 data-bs-toggle="modal" data-bs-target="#likedByModel">
                                 <i class="bi bi-hand-thumbs-up-fill"></i>
+
+                                <span *ngIf="!isLiked(post?.likes)" class="text-muted fs-6">
+                                    <span *ngIf="isFriendsLiked(post.likes).length<=0">
+                                        {{post?.likes?.length}}
+                                    </span>
+                                    <span *ngIf="isFriendsLiked(post.likes).length>=0">
+                                        <span class="text-muted fs-6"
+                                            *ngFor="let item of isFriendsLiked(post.likes); index as i">
+                                            {{item.name}}
+                                            <span *ngIf="i==1">,</span>
+                                        </span>
+                                    </span>
+
+
+                                </span>
+                                <span *ngIf="isLiked(post?.likes)" class="text-muted fs-6">
+                                    <span *ngIf="post?.likes?.length-1>0">
+
+                                        You and {{post?.likes?.length-1}}
+                                        others</span>
+                                    <span *ngIf="post?.likes?.length-1===0">
+                                        {{post?.likes[0]?.name}}
+                                    </span>
+                                </span>
                             </span>
-                            <span>{{post?.likes?.length}}</span>
                         </div>
                     </div>
                     <div class="post-footer">
