--- a/src/app/login-form/login-form.component.css
+++ b/src/app/login-form/login-form.component.css
@@ -1,3 +1,11 @@
 .form-control.ng-invalid.ng-touched {
   border: 1px solid red;
 }
+/* 
+.ng-invalid:not(form).ng-touched {
+  border-left: 5px solid #a94442;
+} */
+
+.ng-valid.form-control.ng-touched {
+  border-left: 5px solid #42a948;
+}
