--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -14,6 +14,8 @@
                     <div *ngIf="!email.valid && email.touched">
                         <div class="text-danger" *ngIf="email.errors?.['required']">Email is required</div>
                         <div class="text-danger" *ngIf="email.errors?.['email']">Email is should be valid email</div>
+                        <div class="text-danger" *ngIf="email.errors?.['maxlength']">Email should be maximum
+                            {{email?.errors?.['maxlength']?.requiredLength}} characters</div>
                     </div>
 
                 </div>
