--- a/src/app/signup-form/signup-form.component.css
+++ b/src/app/signup-form/signup-form.component.css
@@ -6,9 +6,15 @@
   border-left: 5px solid #42a948; /* green */
 }
 
-.ng-invalid:not(form) {
-  border-left: 5px solid #a94442; /* red */
-}
+.ng-invalid:not(form).ng-touched {
+  border-left: 5px solid #a94442; 
+ }
+
+.ng-valid.form-control.ng-touched {
+    border-left: 5px solid #42a948;
+ }
+
+
 
 .alert div {
   background-color: #fed3d3;
