--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -32,7 +32,7 @@
         <posts *ngIf="user?._id" [user]="user" [currentUser]="currentUser" [posts]="posts"></posts>
     </div>
     <div class="row">
-        <div *ngIf="!user?._id" class="alert alert-danger alert-dismissible fade show text-center">
+        <div *ngIf="!user?._id" class=" col mt-5 alert alert-danger alert-dismissible fade show text-center">
             <strong>Cannot find user!</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
