--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -1,4 +1,16 @@
-<div class="conatiner">
+<div class="container" *ngIf="showLoader">
+    <div class="row">
+        <div class="col text-center mt-5">
+
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="conatiner" *ngIf="
+!showLoader">
     <div class="row" class="overflow-auto d-inline-block w-100 comments-bar" style="max-height:250px;"
         #commentsContainer>
         <div class="col" *ngIf="comments?.length>0">
