--- a/src/app/common/components/posts/posts.component.html
+++ b/src/app/common/components/posts/posts.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-3">
     <div class="row">
         <div *ngIf="posts?.length>0">
-            <div class="col-6 offset-4 mt-2 shadow mb-0 bg-body rounded " style="max-width: 350px;"
+            <div class="m-auto offset-sm-3 col-sm-12 mt-2 shadow mb-0 bg-body rounded " style="max-width: 350px;"
                 *ngFor="let post of posts">
                 <div class="post">
                     <div class="post-header p-3">
