--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,14 @@
-<div class="container">
+<div class="container" *ngIf="showLoader">
+    <div class="row">
+        <div class="col text-center mt-5">
+
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" *ngIf="!showLoader">
     <div class="row">
         <div class="col">
             <form [formGroup]="form" class="mt-5">
