--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,4 +1,14 @@
-<div class="container">
+<div class="container" *ngIf="showLoader">
+    <div class="row">
+        <div class="col text-center mt-5">
+
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" *ngIf="!showLoader">
     <div class="row">
         <div class=" mt-2 shadow p-3 mb-2 bg-body rounded text-center" *ngIf="user?._id">
             <img [src]="imageUrl+user?.file" class="img-responsive " style="width:100px;height: 100px;"
