--- a/src/app/common/components/navbar/navbar.component.html
+++ b/src/app/common/components/navbar/navbar.component.html
@@ -30,8 +30,11 @@
                 <li class="nav-item dropdown" *ngIf="auth.isLoggedIn()">
                     <a class="nav-link dropdown-toggle" href="#" id="myprofile" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        <img [src]="imageUrl+currentUser?.file" class="img-responsive" style="width:30px;height: 30px;"
-                            onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'">
+                        <div>
+                            <img [src]="imageUrl+currentUser?.file" class="img-responsive"
+                                style="width:30px;height: 30px;"
+                                onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'">
+                        </div>
                         {{currentUser?.name}}
                     </a>
                     <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="myprofile">
