--- a/src/app/common/components/posts/posts.component.html
+++ b/src/app/common/components/posts/posts.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-3">
     <div class="row">
         <div *ngIf="posts?.length>0">
-            <div class="m-auto offset-sm-3 col-sm-12 mt-2 shadow mb-0 bg-body rounded " style="max-width: 350px;"
+            <div class="m-auto offset-lg-3 col-sm-12 mt-2 shadow mb-0 bg-body rounded " style="max-width: 350px;"
                 *ngFor="let post of posts">
                 <div class="post">
                     <div class="post-header p-3">
@@ -114,10 +114,12 @@
                                         data-bs-toggle="tooltip" data-bs-dismiss="modal" data-bs-placement="bottom"
                                         [title]="'View '+user?.name + ' Profile'">
                                         <div>
+                                            <div>
 
-                                            <img [src]="imageUrl+user?.file" style="width:75px;height: 75px;"
-                                                class="rounded-circle card-img-top img-responsive"
-                                                onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'">
+                                                <img [src]="imageUrl+user?.file" style="width:75px;height: 75px;"
+                                                    class="rounded-circle card-img-top img-responsive"
+                                                    onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'">
+                                            </div>
 
                                             <div class="card-body  ">
                                                 <strong class="card-title text-truncate d-inline-block"
