--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col mt-0 shadow p-3 mb-2 bg-body rounded text-center" *ngIf="currentUser?._id">
             <div class="float-start offset-3">
-                <div>
+                <div class="text-center text-primary">
 
                     <img [src]="imageUrl+currentUser?.file" class="img-responsive " style="width:100px;height: 100px;"
                         *ngIf="currentUser?.file" onerror="this.parentElement.innerHTML='<i class=bi-image-alt></i>'" />
